--- a/README
+++ b/README
@@ -9,7 +9,7 @@ vi /etc/hosts
 0.0.0.0  auth.cdnfly.cn monitor.cdnfly.cn
 2.主控
 v5.1.11版本安装脚本:
-curl -fsSL https://github.com/Imamylii/cdnfly/tree/main/master.sh -o master.sh && chmod +x master.sh && ./master.sh --es-dir /home/es
+curl -fsSL https://github.com/Imamylii/cdnfly/tree/main/master.sh -o master.sh && chmod +x master.sh && ./master.sh --ver v5.1.11 --es-dir /home/es
 
 新v5.1.13版本安装脚本:
 
